V: Vinna i header - hann virkar ekki rett

--- a/pages/header.html
+++ b/pages/header.html
@@ -1,20 +1,29 @@
 <!doctype html>
 <html lang="is">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vöruhúsið</title>
 
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-        <header>
-                <h1>Prílihúsið</h1>
-                <a href="index.html"> Forsíða </a>
-                <a href="products.html">Vörur</a>
-                <a href="course.html">Námskeið</a>
-                <a href="staff.html">Starfsfólk</a>
-        </header>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Vöruhúsið</title>
+
+  <link rel="stylesheet" href="grid.css">
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__box">
+      <div class="box__titill">
+        <h1>Prílihúsið</h1>
+      </div>
+      <div>
+        <a href="index.html"> Forsíða </a>
+        <a href="products.html">Vörur</a>
+        <a href="course.html">Námskeið</a>
+        <a href="staff.html">Starfsfólk</a>
+      </div>
+    </div>
+  </header>
+</body>
+
 </html>
