--- a/pages/course.html
+++ b/pages/course.html
@@ -7,88 +7,101 @@
     <title>Námskeið</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800|Oswald:400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="../scss/Course.scss">
+    <link rel="stylesheet" href="../grid.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
     <main>
-        <div class="namskeid">
-            <section class="namskeid__upplysingar">
-                <h1>Námskeið</h1>
-                <p>Prílihúsið býður upp á fjölbreytt námskeið fyrir byrjendur og lengra komna. Námskeiðin eru kennd af
-                    engri annarri en Karítas Pétursdóttir. Fyrir fólk á öllum aldri. Skráðu þig núna!</p>
-                <div calss="namskeid__upplysingar__mynd">
-                    <img src="../img/climbing-gym.jpg" alt="Mynd af Prílihúsinu">
+        <div class="course">
+            <section class="course__cards">
+                <div class="course__row">
+                    <div class="course__col">
+                        <h1>Námskeið</h1>
+                        <p>Prílihúsið býður upp á fjölbreytt námskeið fyrir byrjendur og lengra komna. Námskeiðin eru
+                            kennd af
+                            engri annarri en Karítas Pétursdóttir. Fyrir fólk á öllum aldri. Skráðu þig núna!</p>
+                    </div>
+                    <div class="course__col">
+
+                        <img class="course__img" src="../img/climbing-gym.jpg" alt="Mynd af Prílihúsinu">
+
+                    </div>
+                </div>
+
+                <div class="course__row">
+                    <div class="course__col">
+                        <h1>Almennar upplýsingar</h1>
+                        <div class="course__col__item">
+                            <label class="course__col__item__info">Nafn:
+                                <input class="course__col__item__input" type="text">
+                            </label>
+                        </div>
+                        <div class="course__col__item">
+                            <label class="course__col__item__info">Heimilisfang:
+                                <input class="course__col__item__input" type="text">
+                            </label>
+                        </div>
+                        <div class="course__col__item">
+                            <label class="course__col__item__info">Aldur:
+                                <input class="course__col__item__input" type="text">
+                            </label>
+                        </div>
+                        <div class="course__col__item">
+                            <label class="course__col__item__info">Námskeið:
+                                <select>
+                                    <option>V0 - V1</option>
+                                    <option>V2 - V4</option>
+                                    <option>V5 - V7</option>
+                                    <option>Krakkanámskeið</option>
+                                    <option>Fjallaklifur</option>
+                                </select>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="course__col">
+                    <h1>Greiðsluupplýsingar</h1>
+                    <div class="course__col__item">
+                        <label class="course__col__item__info">Kortanúmer:
+                            <input class="course__col__item__input" type="text">
+                        </label>
+                    </div>
+                    <div class="course__col__item">
+                        <label class="course__col__item__info">Korthafi:
+                            <input class="course__col__item__input" type="text">
+                        </label>
+                    </div>
+                    <div class="course__col__item">
+                        <label class="course__col__item__info">Gildistími:
+                            <div class="course__col__item__info">Mán</div>
+                            <select>
+                                <option>01</option>
+                                <option>02</option>
+                                <option>03</option>
+                                <option>04</option>
+                                <option>05</option>
+                                <option>06</option>
+                                <option>07</option>
+                                <option>08</option>
+                                <option>09</option>
+                                <option>10</option>
+                                <option>11</option>
+                                <option>12</option>
+                            </select>
+                            <div class="course__col__item__info">Ár</div>
+                            <select>
+                                <option>2019</option>
+                                <option>2020</option>
+                                <option>2021</option>
+                                <option>2022</option>
+                            </select>
+                        </label>
+                    </div>
                 </div>
             </section>
-            <div class="namskeid__skraning">
-                <section class="namskeid__skraning__col">
-                    <h1>Almennar upplýsingar</h1>
-                    <div class="namskeid__skraning__col__item">
-                        <label>Nafn:</label>
-                        <input type="text">
-                    </div>
-                    <div class="namskeid__skraning__col__item">
-                        <label>Heimilisfang:
-                            <input type="text">
-                    </div>
-                    <div class="namskeid__skraning__col__item">
-                        <label>Aldur:</label>
-                        <input type="text">
-                    </div>
-                    <div class="namskeid__skraning__col__item">
-                        <label>Námskeið:</label>
-                        <select>
-                            <option>V0 - V1</option>
-                            <option>V2 - V4</option>
-                            <option>V5 - V7</option>
-                            <option>Krakkanámskeið</option>
-                            <option>Fjallaklifur</option>
-                        </select>
-                    </div>
-                </section>
-                <section class="namskeid__skraning__col">
-                    <h1>Greiðsluupplýsingar</h1>
-                    <div class="namskeid__skraning__col__item">
-                        <label>Kortanúmer:</label>
-                        <input type="text">
-                    </div>
-                    <div class="namskeid__skraning__col__item">
-                        <label>Korthafi:</label>
-                        <input type="text">
-                    </div>
-                    <div class="namskeid__skraning__col__item">
-                        <label>Gildistími:</label>
-                        <input type="text">
-                    </div>
-                    <label>Mán</label>
-                    <select>
-                        <option>01</option>
-                        <option>02</option>
-                        <option>03</option>
-                        <option>04</option>
-                        <option>05</option>
-                        <option>06</option>
-                        <option>07</option>
-                        <option>08</option>
-                        <option>09</option>
-                        <option>10</option>
-                        <option>11</option>
-                        <option>12</option>
-                    </select>
-                    <label>Ár</label>
-                    <select>
-                        <option>2019</option>
-                        <option>2020</option>
-                        <option>2021</option>
-                        <option>2022</option>
-                    </select>
-                </section>
-                <section class="namskeid__skraning__button">
-                    <button>Skrá</button>
-                </section>
-            </div>
+        </div>
+        <button class="course__button">Skrá</button>
         </div>
     </main>
 </body>
