--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vöruhúsið</title>
+  <title>Prílihúsið</title>
 
   <link rel="stylesheet" href="grid.css">
   <link rel="stylesheet" href="styles.css">
@@ -13,19 +13,19 @@
 <body>
     <header class="header">
       <div class="header__box">
-        <div class="box__title">
+        <div class="box__title    ">
           <h1>Prílihúsið</h1>
         </div>
         <div class="box__content">
           <div class="box__lists">
-            <div class="lists__forsida"><a href="index.html"> Forsíða </a></div>
-            <div><a href="products.html">Vörur</a></div>
-            <div><a href="course.html">Námskeið</a></div>
-            <div><a href="staff.html">Starfsfólk</a></div>
+            <div class="box__link__current"><a href="index.html"> Forsíða </a></div>
+            <div><a class="box__link" href="../pages/products.html">Vörur</a></div>
+            <div><a class="box__link" href="../pages/course.html">Námskeið</a></div>
+            <div><a class="box__link" href= "../pages/staff.html">Starfsfólk</a></div>
           </div>
           <div class="box__cart">
             <img src="../img/cart.svg" alt="" />
-            <a href="cart.html">Karfa</a>
+            <a class="box__link" href="../pages/cart.html">Karfa(6)</a>
           </div>
         </div>
       </div>
