--- a/pages/header.html
+++ b/pages/header.html
@@ -11,19 +11,25 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="header__box">
-      <div class="box__titill">
-        <h1>Prílihúsið</h1>
+    <header class="header">
+      <div class="header__box">
+        <div class="box__title    ">
+          <h1>Prílihúsið</h1>
+        </div>
+        <div class="box__content">
+          <div class="box__lists">
+            <div class="box__link__current"><a href="index.html"> Forsíða </a></div>
+            <div><a class="box__link" href="../pages/products.html">Vörur</a></div>
+            <div><a class="box__link" href="../pages/course.html">Námskeið</a></div>
+            <div><a class="box__link" href= "../pages/staff.html">Starfsfólk</a></div>
+          </div>
+          <div class="box__cart">
+            <img src="../img/cart.svg" alt="" />
+            <a class="box__link" href="../pages/cart.html">Karfa(6)</a>
+          </div>
+        </div>
       </div>
-      <div>
-        <a href="index.html"> Forsíða </a>
-        <a href="products.html">Vörur</a>
-        <a href="course.html">Námskeið</a>
-        <a href="staff.html">Starfsfólk</a>
-      </div>
-    </div>
-  </header>
-</body>
+    </header>
+  </body>
 
 </html>
