--- a/pages/staff.html
+++ b/pages/staff.html
@@ -11,58 +11,83 @@
 </head>
 
 <body>
-    <div class="Staff__Dalkar">
-        <div class="Staff__Linur">
-            <section>
-                <div>
-                    <header>Karítas Hrafnsdóttir</header>
+    <header class="header">
+        <div class="header__box">
+            <div class="box__title">
+                <h1>Prílihúsið</h1>
+            </div>
+            <div class="box__content">
+                <div class="box__lists">
+                    <div class="box__link"><a href="../index.html"> Forsíða </a></div>
+                    <div><a class="box__link" href="products.html">Vörur</a></div>
+                    <div><a class="box__link" href="course.html">Námskeið</a></div>
+                    <div><a class="box__link__current" href="../pages/staff.html">Starfsfólk</a></div>
                 </div>
-                <div>
-                    <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.</p>
+                <div class="box__cart">
+                    <img src="../img/cart.svg" alt="" />
+                    <a class="box__link" href="../pages/cart.html">Karfa(6)</a>
                 </div>
-                <div>
-                    <img src="../img/Karitas.jpg" alt="" />
-                </div>
-            </section>
-
-            <section>
-                <div>
-                    <header>Úlfur Arnar Guðjohnsen</header>
-                </div>
-                <div>
-                    <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann var 24 ára.
-                    </p>
-                </div>
-                <div>
-                    <img src="../img/Ulfur Arnar.jpg" alt="" />
-                </div>
-            </section>
+            </div>
         </div>
-        <div>
-            <section>
-                <div>
-                    <header>Bergrós Pétursdóttir</header>
-                </div>
-                <div>
-                    <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
-                </div>
-                <div>
-                    <img src="../img/Bergrós.jpg" alt="" />
-                </div>
-            </section>
+    </header>
+    <main>
+        <section class="staff">
+            <div class="staff__Dalkar">
+                <div class="staff__Linur">
+                    <section>
+                        <div>
+                            <header>Karítas Hrafnsdóttir</header>
+                        </div>
+                        <div>
+                            <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.</p>
+                        </div>
+                        <div>
+                            <img class=staff__img src="../img/Karitas.jpg" alt="" />
+                        </div>
+                    </section>
 
-            <section>
-                <div>
-                    <header> Flóki Andrason</header>
+                    <section>
+                        <div>
+                            <header>Úlfur Arnar Guðjohnsen</header>
+                        </div>
+                        <div>
+                            <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann var
+                                24
+                                ára.
+                            </p>
+                        </div>
+                        <div>
+                            <img lass=staff__img src="../img/Ulfur Arnar.jpg" alt="" />
+                        </div>
+                    </section>
                 </div>
                 <div>
-                    <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá Prílihúsinu.
-                    </p>
+                    <section>
+                        <div>
+                            <header>Bergrós Pétursdóttir</header>
+                        </div>
+                        <div>
+                            <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
+                        </div>
+                        <div>
+                            <img class=staff__img src="../img/Bergrós.jpg" alt="" />
+                        </div>
+                    </section>
+
+                    <section>
+                        <div>
+                            <header> Flóki Andrason</header>
+                        </div>
+                        <div>
+                            <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá
+                                Prílihúsinu.
+                            </p>
+                        </div>
+                        <div></div>
+                        <img class=staff__img src="../img/Floki.jpg" alt="" />
                 </div>
-                <div></div>
-                <img src="../img/Floki.jpg" alt="" />
+        </section>
         </div>
         </section>
-    </div>
-    </div>
+    </main>
 </body>
