--- a/pages/staff.html
+++ b/pages/staff.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Starfsfólk</title>
 
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../grid.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -30,64 +30,55 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="main">>
         <section class="staff">
-            <div class="staff__Dalkar">
-                <div class="staff__Linur">
-                    <section>
-                        <div>
-                            <header>Karítas Hrafnsdóttir</header>
-                        </div>
-                        <div>
-                            <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.</p>
-                        </div>
-                        <div>
-                            <img class=staff__img src="../img/Karitas.jpg" alt="" />
-                        </div>
-                    </section>
-
-                    <section>
-                        <div>
-                            <header>Úlfur Arnar Guðjohnsen</header>
-                        </div>
-                        <div>
-                            <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann var
-                                24
-                                ára.
-                            </p>
-                        </div>
-                        <div>
-                            <img lass=staff__img src="../img/Ulfur Arnar.jpg" alt="" />
-                        </div>
-                    </section>
+            <div class="staff__cards">
+                <div class="staff__card">
+                    <div class="staff__card__front">
+                        <img class=staff__img src="../img/Karitas.jpg" alt="" />
+                    </div>
+                    <div class="staff__card__back">
+                        <header>Karítas Hrafnsdóttir</header>
+                        <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.</p>
+                    </div>
                 </div>
-                <div>
-                    <section>
-                        <div>
-                            <header>Bergrós Pétursdóttir</header>
-                        </div>
-                        <div>
-                            <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
-                        </div>
-                        <div>
-                            <img class=staff__img src="../img/Bergrós.jpg" alt="" />
-                        </div>
-                    </section>
 
-                    <section>
-                        <div>
-                            <header> Flóki Andrason</header>
-                        </div>
-                        <div>
-                            <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá
-                                Prílihúsinu.
-                            </p>
-                        </div>
-                        <div></div>
+                <div class="staff__card">
+                    <div class="staff__card__front">
+                        <img class=staff__img src="../img/Ulfur Arnar.jpg" alt="" />
+                    </div>
+                    <div class="staff__card__back">
+                        <header>Úlfur Arnar Guðjohnsen</header>
+                        <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann var 
+                            24 ára.
+                        </p>
+                    </div>
+                </div>
+
+
+                <div class="staff__card">
+                    <div class="staff__card__front">
+                        <img class=staff__img src="../img/Bergrós.jpg" alt="" />
+                    </div>
+                    <div class="staff__card__back">
+                        <header>Bergrós Pétursdóttir</header>
+                        <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
+                    </div>
+                </div>
+
+
+                <div class="staff__card">
+                    <div class="staff__card__front">
                         <img class=staff__img src="../img/Floki.jpg" alt="" />
+                    </div>
+                    <div class="staff__card__back">
+                        <header> Flóki Andrason</header>
+                        <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá
+                            Prílihúsinu.
+                        </p>
+                    </div>
                 </div>
-        </section>
-        </div>
+            </div>
         </section>
     </main>
 </body>
