--- a/pages/staff.html
+++ b/pages/staff.html
@@ -32,51 +32,68 @@
     </header>
     <main class="main">>
         <section class="staff">
-            <div class="staff__cards">
-                <div class="staff__card">
-                    <div class="staff__card__front">
-                        <img class=staff__img src="../img/Karitas.jpg" alt="" />
-                    </div>
-                    <div class="staff__card__back">
-                        <header>Karítas Hrafnsdóttir</header>
-                        <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.</p>
-                    </div>
+            <div class="staff__row">
+                <!--Karítas-->
+                <div class="staff__col">
+                    <section class="staff__card">
+                        <div class="staff__card__inline">
+                            <div class="staff__card__front">
+                                <img class=staff__img src="../img/Karitas.jpg" alt="" />
+                            </div>
+                            <div class="staff__card__back">
+                                <header>Karítas Hrafnsdóttir</header>
+                                <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.
+                                </p>
+                            </div>
+                        </div>
+                    </section>
                 </div>
-
-                <div class="staff__card">
-                    <div class="staff__card__front">
-                        <img class=staff__img src="../img/Ulfur Arnar.jpg" alt="" />
-                    </div>
-                    <div class="staff__card__back">
-                        <header>Úlfur Arnar Guðjohnsen</header>
-                        <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann var 
-                            24 ára.
-                        </p>
-                    </div>
+                <!--Úlfur-->
+                <div class="staff__col">
+                    <section class="staff__card">
+                        <div class="staff__card__inline">
+                            <div class="staff__card__front">
+                                <img class=staff__img src="../img/Ulfur Arnar.jpg" alt="" />
+                            </div>
+                            <div class="staff__card__back">
+                                <header>Úlfur Arnar Guðjohnsen</header>
+                                <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann
+                                    var
+                                    24 ára.
+                                </p>
+                            </div>
+                        </div>
+                    </section>
                 </div>
-
-
-                <div class="staff__card">
-                    <div class="staff__card__front">
-                        <img class=staff__img src="../img/Bergrós.jpg" alt="" />
-                    </div>
-                    <div class="staff__card__back">
-                        <header>Bergrós Pétursdóttir</header>
-                        <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
-                    </div>
+                <!--Bergrós-->
+                <div class="staff__col">
+                    <section class="staff__card">
+                        <div class="staff__card__inline">
+                            <div class="staff__card__front">
+                                <img class=staff__img src="../img/Bergrós.jpg" alt="" />
+                            </div>
+                            <div class="staff__card__back">
+                                <header>Bergrós Pétursdóttir</header>
+                                <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
+                            </div>
+                        </div>
+                    </section>
                 </div>
-
-
-                <div class="staff__card">
-                    <div class="staff__card__front">
-                        <img class=staff__img src="../img/Floki.jpg" alt="" />
-                    </div>
-                    <div class="staff__card__back">
-                        <header> Flóki Andrason</header>
-                        <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá
-                            Prílihúsinu.
-                        </p>
-                    </div>
+                <!--Flóki-->
+                <div class="staff__col">
+                    <section class="staff__card">
+                        <div class="staff__card__inline">
+                            <div class="staff__card__front">
+                                <img class=staff__img src="../img/Floki.jpg" alt="" />
+                            </div>
+                            <div class="staff__card__back">
+                                <header> Flóki Andrason</header>
+                                <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá
+                                    Prílihúsinu.
+                                </p>
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </div>
         </section>
