forsíða og námskeið updated

--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
 <!doctype html>
 <html lang="is">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vöruhúsið</title>
 
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Vöruhúsið</title>
 
-  </body>
+  <link rel="stylesheet" href="grid.css">
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <main>
+    <section class="info">
+      <div class="info__cards">
+        <div class="info__card">
+          <div class="info__text">
+            <h2>Allar vörurnar</h2>
+            <p>Vöruhúsið hefur allar þær vörur sem þig vantar</p>
+            <div class="info__button">
+              <a href="./pages/products.html">Skoða vörur</a>
+            </div>
+          </div>
+        </div>
+        <div class="info__card">
+          <div class="info__img">
+            <img src="./img/products.jpg">
+          </div>
+        </div>
+        <div class="info__card">
+          <div class="info__text">
+            <h2>Besta starfsfólkið</h1>
+              <p>Starfsfólkið okkar hugsar vel um þig</p>
+              <div class="info__button">
+                <a href="./pages/products.html">Kynnast starfsfólki</a>
+              </div>
+          </div>
+        </div>
+        <div class="info__card">
+          <div class="info__img">
+            <img src="./img/team.jpg">
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
