--- a/pages/course.html
+++ b/pages/course.html
@@ -12,17 +12,18 @@
 </head>
 
 <body>
-    <main>
+    <main class="main__course">
         <div class="course">
             <section class="course__cards">
                 <div class="course__row">
-                    <div class="course__col">
-                        <h1>Námskeið</h1>
-                        <p>Prílihúsið býður upp á fjölbreytt námskeið fyrir byrjendur og lengra komna. Námskeiðin eru
+                    <div class="course__col__1">
+                        <h1 class="course__h1">Námskeið</h1>
+                        <p class="course__p">Prílihúsið býður upp á fjölbreytt námskeið fyrir byrjendur og lengra komna.
+                            Námskeiðin eru
                             kennd af
                             engri annarri en Karítas Pétursdóttir. Fyrir fólk á öllum aldri. Skráðu þig núna!</p>
                     </div>
-                    <div class="course__col">
+                    <div class="course__col__2">
 
                         <img class="course__img" src="../img/climbing-gym.jpg" alt="Mynd af Prílihúsinu">
 
@@ -30,8 +31,8 @@
                 </div>
 
                 <div class="course__row">
-                    <div class="course__col">
-                        <h1>Almennar upplýsingar</h1>
+                    <div class="course__col__3">
+                        <h1 class="course__h1__2">Almennar upplýsingar</h1>
                         <div class="course__col__item">
                             <label class="course__col__item__info">Nafn:
                                 <input class="course__col__item__input" type="text">
@@ -49,7 +50,7 @@
                         </div>
                         <div class="course__col__item">
                             <label class="course__col__item__info">Námskeið:
-                                <select>
+                                <select class="course__col__item__info__courses">
                                     <option>V0 - V1</option>
                                     <option>V2 - V4</option>
                                     <option>V5 - V7</option>
@@ -59,49 +60,50 @@
                             </label>
                         </div>
                     </div>
+                    <div class="course__col__4"></div>
+                    <div class="course__col__5">
+                        <h1 class="course__h1__2">Greiðsluupplýsingar</h1>
+                        <div class="course__col__item">
+                            <label class="course__col__item__info">Kortanúmer:
+                                <input class="course__col__item__input" type="text">
+                            </label>
+                        </div>
+                        <div class="course__col__item">
+                            <label class="course__col__item__info">Korthafi:
+                                <input class="course__col__item__input" type="text">
+                            </label>
+                        </div>
+                        <div class="course__col__item">
+                            <label class="course__col__item__info">Gildistími:
+                                <div class="course__col__item__info__month">Mán</div>
+                                <select class="course__col__item__input__month">
+                                    <option>01</option>
+                                    <option>02</option>
+                                    <option>03</option>
+                                    <option>04</option>
+                                    <option>05</option>
+                                    <option>06</option>
+                                    <option>07</option>
+                                    <option>08</option>
+                                    <option>09</option>
+                                    <option>10</option>
+                                    <option>11</option>
+                                    <option>12</option>
+                                </select>
+                                <div class="course__col__item__info__year">Ár</div>
+                                <select class="course__col__item__input__year">
+                                    <option>2019</option>
+                                    <option>2020</option>
+                                    <option>2021</option>
+                                    <option>2022</option>
+                                </select>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="course__col__6"></div>
                 </div>
-                <div class="course__col">
-                    <h1>Greiðsluupplýsingar</h1>
-                    <div class="course__col__item">
-                        <label class="course__col__item__info">Kortanúmer:
-                            <input class="course__col__item__input" type="text">
-                        </label>
-                    </div>
-                    <div class="course__col__item">
-                        <label class="course__col__item__info">Korthafi:
-                            <input class="course__col__item__input" type="text">
-                        </label>
-                    </div>
-                    <div class="course__col__item">
-                        <label class="course__col__item__info">Gildistími:
-                            <div class="course__col__item__info">Mán</div>
-                            <select>
-                                <option>01</option>
-                                <option>02</option>
-                                <option>03</option>
-                                <option>04</option>
-                                <option>05</option>
-                                <option>06</option>
-                                <option>07</option>
-                                <option>08</option>
-                                <option>09</option>
-                                <option>10</option>
-                                <option>11</option>
-                                <option>12</option>
-                            </select>
-                            <div class="course__col__item__info">Ár</div>
-                            <select>
-                                <option>2019</option>
-                                <option>2020</option>
-                                <option>2021</option>
-                                <option>2022</option>
-                            </select>
-                        </label>
-                    </div>
-                </div>
+                <button class="course__button">Skrá</button>
             </section>
-        </div>
-        <button class="course__button">Skrá</button>
         </div>
     </main>
 </body>
