--- a/index.html
+++ b/index.html
@@ -4,18 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<<<<<<< HEAD
   <title>Prílihúsið</title>
-=======
-  <title>Vöruhúsið</title>
->>>>>>> d270e9e48620276c4a88295233665f2d22e97c1d
 
   <link rel="stylesheet" href="grid.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-<<<<<<< HEAD
     <header class="header">
       <div class="header__box">
         <div class="box__title    ">
@@ -36,7 +31,6 @@
       </div>
     </header>
   </body>
-=======
   <main>
     <section class="info">
       <div class="info__cards">
@@ -71,7 +65,58 @@
       </div>
     </section>
   </main>
+  <footer class="fotur">
+      <div class="fotur__texti">
+      <nav class="fotur__texti__listi">
+          <ul>
+              <b class="fotur__texti__listi__b"><li>Vöruflokkar</li></b>
+              <div class="fotur__texti__listi__li">
+              <li>Nauðsynjavörur</li>
+              <li>Frábærar vörur</li>
+              <li>Ómissandi vörur</li>
+              <li>Ótrúlegar vörur</li>
+              <li>Magnaðar vörur</li>
+          </div>
+          </ul>
+      </nav>
+      <nav class="fotur__texti__listi">
+          <ul>
+              <b class="fotur__texti__listi__b"><li>Vöruflokkar</li></b>
+              <div class="fotur__texti__listi__li">
+              <li>Trylltar vörur</li>
+              <li>Geggjaðar vörur</li>
+              <li>Svakalegar vörur</li>
+              <li>Fáránlegar vörur</li>
+              <li>Klikkaðar vörur</li>
+          </div>
+          </ul>
+      </nav>
+      <nav class="fotur__texti__listi">
+          <ul>
+              <b class="fotur__texti__listi__b"><li>Námskeið</li></b>
+              <div class="fotur__texti__listi__li">
+              <li>V0 - V1 námskeið</li>
+              <li>V2 - V4 námskeið</li>
+              <li>V5 - V7 námskeið</li>
+              <li>Fjallaklifur námskeið</li> 
+          </div> 
+          </ul>
+      </nav>
+      <nav class="fotur__texti__listi">
+          <ul>
+              <b class="fotur__texti__listi__b"><li>Síður</li></b>
+              <div class="fotur__texti__listi__li">
+              <li>Allar vörur</li>
+              <li>Starfsfólk</li>
+              <li>Námskeið</li>
+              <li>Karfa</li>
+          </div>
+          </ul>
+         
+      </nav>
+  </div>
+  <div class="fotur__texti__vorumerki">© 2018 Vöruhúsið</div>
+  </footer>
 </body>
->>>>>>> d270e9e48620276c4a88295233665f2d22e97c1d
 
 </html>
