--- a/pages/staff.html
+++ b/pages/staff.html
@@ -98,4 +98,56 @@
             </div>
         </section>
     </main>
+    <footer class="fotur">
+            <div class="fotur__texti">
+            <nav class="fotur__texti__listi">
+                <ul>
+                    <b class="fotur__texti__listi__b"><li>Vöruflokkar</li></b>
+                    <div class="fotur__texti__listi__li">
+                    <li>Nauðsynjavörur</li>
+                    <li>Frábærar vörur</li>
+                    <li>Ómissandi vörur</li>
+                    <li>Ótrúlegar vörur</li>
+                    <li>Magnaðar vörur</li>
+                </div>
+                </ul>
+            </nav>
+            <nav class="fotur__texti__listi">
+                <ul>
+                    <b class="fotur__texti__listi__b"><li>Vöruflokkar</li></b>
+                    <div class="fotur__texti__listi__li">
+                    <li>Trylltar vörur</li>
+                    <li>Geggjaðar vörur</li>
+                    <li>Svakalegar vörur</li>
+                    <li>Fáránlegar vörur</li>
+                    <li>Klikkaðar vörur</li>
+                </div>
+                </ul>
+            </nav>
+            <nav class="fotur__texti__listi">
+                <ul>
+                    <b class="fotur__texti__listi__b"><li>Námskeið</li></b>
+                    <div class="fotur__texti__listi__li">
+                    <li>V0 - V1 námskeið</li>
+                    <li>V2 - V4 námskeið</li>
+                    <li>V5 - V7 námskeið</li>
+                    <li>Fjallaklifur námskeið</li> 
+                </div> 
+                </ul>
+            </nav>
+            <nav class="fotur__texti__listi">
+                <ul>
+                    <b class="fotur__texti__listi__b"><li>Síður</li></b>
+                    <div class="fotur__texti__listi__li">
+                    <li>Allar vörur</li>
+                    <li>Starfsfólk</li>
+                    <li>Námskeið</li>
+                    <li>Karfa</li>
+                </div>
+                </ul>
+               
+            </nav>
+        </div>
+        <div class="fotur__texti__vorumerki">© 2018 Vöruhúsið</div>
+        </footer>
 </body>
