hugsanlega final commit í bili

--- a/index.html
+++ b/index.html
@@ -12,59 +12,53 @@
 
 <body>
     <header class="header">
-      <div class="header__box">
-        <div class="box__title    ">
-          <h1>Prílihúsið</h1>
-        </div>
-        <div class="box__content">
-          <div class="box__lists">
-            <div class="box__link__current"><a href="index.html"> Forsíða </a></div>
-            <div><a class="box__link" href="../pages/products.html">Vörur</a></div>
-            <div><a class="box__link" href="../pages/course.html">Námskeið</a></div>
-            <div><a class="box__link" href= "../pages/staff.html">Starfsfólk</a></div>
+        <div class="header__box">
+          <div class="box__title    ">
+            <h1 class="box__title__h1">Prílihúsið</h1>
           </div>
-          <div class="box__cart">
-            <img src="../img/cart.svg" alt="" />
-            <a class="box__link" href="../pages/cart.html">Karfa(6)</a>
-          </div>
-        </div>
-      </div>
-    </header>
-  </body>
-  <main>
-    <section class="info">
-      <div class="info__cards">
-        <div class="info__card">
-          <div class="info__text">
-            <h2>Allar vörurnar</h2>
-            <p>Vöruhúsið hefur allar þær vörur sem þig vantar</p>
-            <div class="info__button">
-              <a href="./pages/products.html">Skoða vörur</a>
+          <div class="box__content">
+            <div class="box__lists">
+              <div class="box__link__current"><a href="index.html"> Forsíða </a></div>
+              <div><a class="box__link" href="../pages/products.html">Vörur</a></div>
+              <div><a class="box__link" href="../pages/course.html">Námskeið</a></div>
+              <div><a class="box__link" href= "../pages/staff.html">Starfsfólk</a></div>
+            </div>
+            <div class="box__cart">
+              <img src="../img/cart.svg" alt="" />
+              <a class="box__link" href="../pages/cart.html">Karfa(6)</a>
             </div>
           </div>
         </div>
-        <div class="info__card">
-          <div class="info__img">
-            <img src="./img/products.jpg">
+      </header>
+    </body>
+    <main>
+      <section class="info">
+        <div class="info__cards">
+          <div class="info__card">
+            <div class="info__text">
+              <h2 class="info__text__h2">Allar vörurnar</h2>
+              <p class="info__text__p">Vöruhúsið hefur allar þær vörur sem þig vantar</p>              <button class="info__button" href="./pages/products.html">Skoða vörur</button>          </div>
+          </div>
+          <div class="info__card">
+            <div class="info__img">
+              <img src="./img/products.jpg">
+            </div>
+          </div>
+          <div class="info__card">
+            <div class="info__text">
+              <h2 class="info__text__h2">Besta starfsfólkið</h1>
+                <p class="info__text__p">Starfsfólkið okkar hugsar vel um þig</p>
+                  <button class="info__button" href="./pages/products.html">Kynnast starfsfólki</button>
+            </div>
+          </div>
+          <div class="info__card">
+            <div class="info__img">s
+              <img src="./img/team.jpg">
+            </div>
           </div>
         </div>
-        <div class="info__card">
-          <div class="info__text">
-            <h2>Besta starfsfólkið</h1>
-              <p>Starfsfólkið okkar hugsar vel um þig</p>
-              <div class="info__button">
-                <a href="./pages/products.html">Kynnast starfsfólki</a>
-              </div>
-          </div>
-        </div>
-        <div class="info__card">
-          <div class="info__img">
-            <img src="./img/team.jpg">
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
   <footer class="fotur">
       <div class="fotur__texti">
       <nav class="fotur__texti__listi">
