--- a/pages/staff.html
+++ b/pages/staff.html
@@ -37,13 +37,14 @@
                 <div class="staff__col">
                     <section class="staff__card">
                         <div class="staff__card__inline">
+                            
+                            <div class="staff__card__back">
+                                <header class="staff__title">Karítas Hrafnsdóttir</header>
+                                <p class="staff__text"> Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.
+                                </p>
+                            </div>
                             <div class="staff__card__front">
                                 <img class=staff__img src="../img/Karitas.jpg" alt="" />
-                            </div>
-                            <div class="staff__card__back">
-                                <header>Karítas Hrafnsdóttir</header>
-                                <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.
-                                </p>
                             </div>
                         </div>
                     </section>
@@ -56,11 +57,8 @@
                                 <img class=staff__img src="../img/Ulfur Arnar.jpg" alt="" />
                             </div>
                             <div class="staff__card__back">
-                                <header>Úlfur Arnar Guðjohnsen</header>
-                                <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann
-                                    var
-                                    24 ára.
-                                </p>
+                                <header class="staff__title" >Úlfur Arnar Guðjohnsen</header>
+                                <p class="staff__text">Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann var 24 ára.</p>
                             </div>
                         </div>
                     </section>
@@ -73,8 +71,8 @@
                                 <img class=staff__img src="../img/Bergrós.jpg" alt="" />
                             </div>
                             <div class="staff__card__back">
-                                <header>Bergrós Pétursdóttir</header>
-                                <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
+                                <header class="staff__title">Bergrós Pétursdóttir</header>
+                                <p class="staff__text">Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
                             </div>
                         </div>
                     </section>
@@ -87,8 +85,8 @@
                                 <img class=staff__img src="../img/Floki.jpg" alt="" />
                             </div>
                             <div class="staff__card__back">
-                                <header> Flóki Andrason</header>
-                                <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá
+                                <header class="staff__title"> Flóki Andrason</header>
+                                <p class="staff__text">Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá
                                     Prílihúsinu.
                                 </p>
                             </div>
