--- a/pages/cart.html
+++ b/pages/cart.html
@@ -144,6 +144,257 @@
       </div>
     </div>
   </main>
+
+  <main class="main__course">
+      <div class="cart__row">
+          <div class="cart__col__3">
+              <h1 class="cart__h1__2">Sendingarupplýsingar</h1>
+              <div class="cart__col__item">
+                  <label class="cart__col__item__info">Nafn:
+                      <input class="cart__col__item__input" type="text">
+                  </label>
+              </div>
+              <div class="cart__col__item">
+                  <label class="cart__col__item__info">Heimilisfang:
+                      <input class="cart__col__item__input" type="text">
+                  </label>
+              </div>
+              <div class="cart__col__item">
+                  <label class="cart__col__item__info">Póstnúmer:
+                      <select class="cart__col__item__info__carts">
+                              <option>-Velja póstnúmer-</option>>
+                              <option>101 Reykjavík</option>>
+                              <option>103 Reykjavík</option>>
+                              <option>104 Reykjavík</option>>
+                              <option>105 Reykjavík</option>>
+                              <option>107 Reykjavík</option>>
+                              <option>108 Reykjavík</option>>
+                              <option>109 Reykjavík</option>>
+                              <option>110 Reykjavík</option>>
+                              <option>111 Reykjavík</option>>
+                              <option>112 Reykjavík</option>>
+                              <option>113 Reykjavík</option>>
+                              <option>116 Reykjavík</option>>
+                              <option>121 Reykjavík</option>>
+                              <option>123 Reykjavík</option>>
+                              <option>124 Reykjavík</option>>
+                              <option>125 Reykjavík</option>>
+                              <option>127 Reykjavík</option>>
+                              <option>128 Reykjavík</option>>
+                              <option>129 Reykjavík</option>>
+                              <option>130 Reykjavík</option>>
+                              <option>132 Reykjavík</option>>
+                              <option>162 Reykjavík - Dreifbýli</option>>
+                              <option>170 Seltjarnarnesi</option>>
+                              <option>172 Seltjarnarnesi</option>>
+                              <option>190 Vogum</option>>
+                              <option>191 Vogum</option>>
+                              <option>200 Kópavogi</option>>
+                              <option>201 Kópavogi</option>>
+                              <option>202 Kópavogi</option>>
+                              <option>203 Kópavogi</option>>
+                              <option>210 Garðabæ</option>>
+                              <option>212 Garðabæ</option>>
+                              <option>220 Hafnarfirði</option>>
+                              <option>221 Hafnarfirði</option>>
+                              <option>222 Hafnarfirði</option>>
+                              <option>225 Garðabær</option>>
+                              <option>230 Reykjanesbæ</option>>
+                              <option>232 Reykjanesbæ</option>>
+                              <option>233 Reykjanesbæ</option>>
+                              <option>235 Keflavíkurflugvöllur</option>>
+                              <option>240 Grindavík</option>>
+                              <option>241 Grindavík</option>>
+                              <option>245 Sandgerði</option>>
+                              <option>246 Sandgerði</option>>
+                              <option>250 Garði</option>>
+                              <option>251 Garði</option>>
+                              <option>260 Reykjanesbæ</option>>
+                              <option>262 Reykjanesbæ</option>>
+                              <option>270 Mosfellsbæ</option>>
+                              <option>271 Mosfellsbæ</option>>
+                              <option>276 Mosfellsbæ</option>>
+                              <option>300 Akranesi</option>>
+                              <option>301 Akranesi</option>>
+                              <option>302 Akranesi</option>>
+                              <option>310 Borgarnesi</option>>
+                              <option>311 Borgarnesi</option>>
+                              <option>320 Reykholt í Borgarfirði</option>>
+                              <option>340 Stykkishólmi</option>>
+                              <option>341 Stykkishólmi</option>>
+                              <option>345 Flatey á Breiðafirði</option>>
+                              <option>350 Grundarfirði</option>>
+                              <option>351 Grundarfirði</option>>
+                              <option>355 Ólafsvík</option>>
+                              <option>356 Snæfellsbæ</option>>
+                              <option>360 Hellissandi</option>>
+                              <option>370 Búðardal</option>>
+                              <option>371 Búðardal</option>>
+                              <option>380 Reykhólahreppi</option>>
+                              <option>381 Reykhólahreppi</option>>
+                              <option>400 Ísafirði</option>>
+                              <option>401 Ísafirði</option>>
+                              <option>410 Hnífsdal</option>>
+                              <option>415 Bolungarvík</option>>
+                              <option>416 Bolungarvík</option>>
+                              <option>420 Súðavík</option>>
+                              <option>421 Súðavík</option>>
+                              <option>425 Flateyri</option>>
+                              <option>426 Flateyri</option>>
+                              <option>430 Suðureyri</option>>
+                              <option>431 Suðureyri</option>>
+                              <option>450 Patreksfirði</option>>
+                              <option>451 Patreksfirði</option>>
+                              <option>460 Tálknafirði</option>>
+                              <option>461 Tálknafirði</option>>
+                              <option>465 Bíldudal</option>>
+                              <option>466 Bíldudal</option>>
+                              <option>470 Þingeyri</option>>
+                              <option>471 Þingeyri</option>>
+                              <option>500 Stað</option>>
+                              <option>510 Hólmavík</option>>
+                              <option>511 Hólmavík</option>>
+                              <option>512 Hólmavík</option>>
+                              <option>520 Drangsnesi</option>>
+                              <option>524 Árneshreppi</option>>
+                              <option>530 Hvammstanga</option>>
+                              <option>531 Hvammstanga</option>>
+                              <option>540 Blönduósi</option>>
+                              <option>541 Blönduósi</option>>
+                              <option>545 Skagaströnd</option>>
+                              <option>546 Skagaströnd</option>>
+                              <option>550 Sauðárkróki</option>>
+                              <option>551 Sauðárkróki</option>>
+                              <option>560 Varmahlíð</option>>
+                              <option>561 Varmahlíð</option>>
+                              <option>565 Hofsós</option>>
+                              <option>566 Hofsós</option>>
+                              <option>570 Fljótum</option>>
+                              <option>580 Siglufirði</option>>
+                              <option>581 Siglufirði</option>>
+                              <option>600 Akureyri</option>>
+                              <option>601 Akureyri</option>>
+                              <option>602 Akureyri</option>>
+                              <option>603 Akureyri</option>>
+                              <option>610 Grenivík</option>>
+                              <option>611 Grímsey</option>>
+                              <option>616 Grenivík</option>>
+                              <option>620 Dalvík</option>>
+                              <option>621 Dalvík</option>>
+                              <option>625 Ólafsfirði</option>>
+                              <option>626 Ólafsfirði</option>>
+                              <option>630 Hrísey</option>>
+                              <option>640 Húsavík</option>>
+                              <option>641 Húsavík</option>>
+                              <option>645 Fosshólli</option>>
+                              <option>650 Laugum</option>>
+                              <option>660 Mývatni</option>>
+                              <option>670 Kópaskeri</option>>
+                              <option>671 Kópaskeri</option>>
+                              <option>675 Raufarhöfn</option>>
+                              <option>676 Raufarhöfn</option>>
+                              <option>680 Þórshöfn</option>>
+                              <option>681 Þórshöfn</option>>
+                              <option>685 Bakkafirði</option>>
+                              <option>686 Bakkafirði</option>>
+                              <option>690 Vopnafirði</option>>
+                              <option>691 Vopnafirði</option>>
+                              <option>700 Egilsstöðum</option>>
+                              <option>701 Egilsstöðum</option>>
+                              <option>710 Seyðisfirði</option>>
+                              <option>711 Seyðisfirði</option>>
+                              <option>715 Mjóafirði</option>>
+                              <option>720 Borgarfirði (eystri)</option>>
+                              <option>721 Borgarfirði (eystri)</option>>
+                              <option>730 Reyðarfirði</option>>
+                              <option>731 Reyðarfirði</option>>
+                              <option>735 Eskifirði</option>>
+                              <option>736 Eskifirði</option>>
+                              <option>740 Neskaupstað</option>>
+                              <option>741 Neskaupsstað</option>>
+                              <option>750 Fáskrúðsfirði</option>>
+                              <option>751 Fáskrúðsfirði</option>>
+                              <option>755 Stöðvarfirði</option>>
+                              <option>756 Stöðvarfirði</option>>
+                              <option>760 Breiðdalsvík</option>>
+                              <option>761 Breiðdalsvík</option>>
+                              <option>765 Djúpavogi</option>>
+                              <option>766 Djúpavogi</option>>
+                              <option>780 Höfn í Hornafirði</option>>
+                              <option>781 Höfn í Hornafirði</option>>
+                              <option>785 Öræfum</option>>
+                              <option>800 Selfossi</option>>
+                              <option>801 Selfossi</option>>
+                              <option>802 Selfossi</option>>
+                              <option>810 Hveragerði</option>>
+                              <option>815 Þorlákshöfn</option>>
+                              <option>816 Ölfus</option>>
+                              <option>820 Eyrarbakka</option>>
+                              <option>825 Stokkseyri</option>>
+                              <option>840 Laugarvatni</option>>
+                              <option>845 Flúðum</option>>
+                              <option>846 Flúðum</option>>
+                              <option>850 Hellu</option>>
+                              <option>851 Hellu</option>>
+                              <option>860 Hvolsvelli</option>>
+                              <option>861 Hvolsvelli</option>>
+                              <option>870 Vík</option>>
+                              <option>871 Vík</option>>
+                              <option>880 Kirkjubæjarklaustri</option>>
+                              <option>881 Kirkjubæjarklaustri</option>>
+                              <option>900 Vestmannaeyjum</option>>
+                              <option>902 Vestmannaeyjum</option>>
+                              
+                      </select>
+                  </label>
+              </div>
+          </div>
+          <div class="cart__col__4"></div>
+          <div class="cart__col__5">
+              <h1 class="cart__h1__2">Greiðsluupplýsingar</h1>
+              <div class="cart__col__item">
+                  <label class="cart__col__item__info">Kortanúmer:
+                      <input class="cart__col__item__input" type="text">
+                  </label>
+              </div>
+              <div class="cart__col__item">
+                  <label class="cart__col__item__info">Korthafi:
+                      <input class="cart__col__item__input" type="text">
+                  </label>
+              </div>
+              <div class="cart__col__item">
+                  <label class="cart__col__item__info">Gildistími:
+                      <div class="cart__col__item__info__month">Mán</div>
+                      <select class="cart__col__item__input__month">
+                          <option>01</option>
+                          <option>02</option>
+                          <option>03</option>
+                          <option>04</option>
+                          <option>05</option>
+                          <option>06</option>
+                          <option>07</option>
+                          <option>08</option>
+                          <option>09</option>
+                          <option>10</option>
+                          <option>11</option>
+                          <option>12</option>
+                      </select>
+                      <div class="cart__col__item__info__year">Ár</div>
+                      <select class="cart__col__item__input__year">
+                          <option>2019</option>
+                          <option>2020</option>
+                          <option>2021</option>
+                          <option>2022</option>
+                      </select>
+                  </label>
+              </div>
+          </div>
+          <div class="cart__col__6"></div>
+      </div>
+      <button class="cart__button">Skrá</button>
+  </section>
+</div>
+</main>
   <footer class="fotur">
         <div class="fotur__texti">
         <nav class="fotur__texti__listi">
