--- a/pages/products.html
+++ b/pages/products.html
@@ -220,11 +220,11 @@
             <ul>
                 <b class="fotur__texti__listi__b"><li>Vöruflokkar</li></b>
                 <div class="fotur__texti__listi__li">
-                <li>Nauðsynjavörur</li>
-                <li>Frábærar vörur</li>
-                <li>Ómissandi vörur</li>
-                <li>Ótrúlegar vörur</li>
-                <li>Magnaðar vörur</li>
+                <li class="footer__list__text">Nauðsynjavörur</li>
+                <li class="footer__list__text">Frábærar vörur</li>
+                <li class="footer__list__text">Ómissandi vörur</li>
+                <li class="footer__list__text">Ótrúlegar vörur</li>
+                <li class="footer__list__text">Magnaðar vörur</li>
             </div>
             </ul>
         </nav>
@@ -232,11 +232,11 @@
             <ul>
                 <b class="fotur__texti__listi__b"><li>Vöruflokkar</li></b>
                 <div class="fotur__texti__listi__li">
-                <li>Trylltar vörur</li>
-                <li>Geggjaðar vörur</li>
-                <li>Svakalegar vörur</li>
-                <li>Fáránlegar vörur</li>
-                <li>Klikkaðar vörur</li>
+                <li class="footer__list__text">Trylltar vörur</li>
+                <li class="footer__list__text">Geggjaðar vörur</li>
+                <li class="footer__list__text">Svakalegar vörur</li>
+                <li class="footer__list__text">Fáránlegar vörur</li>
+                <li class="footer__list__text">Klikkaðar vörur</li>
             </div>
             </ul>
         </nav>
@@ -244,10 +244,10 @@
             <ul>
                 <b class="fotur__texti__listi__b"><li>Námskeið</li></b>
                 <div class="fotur__texti__listi__li">
-                <li>V0 - V1 námskeið</li>
-                <li>V2 - V4 námskeið</li>
-                <li>V5 - V7 námskeið</li>
-                <li>Fjallaklifur námskeið</li> 
+                <li class="footer__list__text">V0 - V1 námskeið</li>
+                <li class="footer__list__text">V2 - V4 námskeið</li>
+                <li class="footer__list__text">V5 - V7 námskeið</li>
+                <li class="footer__list__text">Fjallaklifur námskeið</li> 
             </div> 
             </ul>
         </nav>
@@ -255,10 +255,10 @@
             <ul>
                 <b class="fotur__texti__listi__b"><li>Síður</li></b>
                 <div class="fotur__texti__listi__li">
-                <li>Allar vörur</li>
-                <li>Starfsfólk</li>
-                <li>Námskeið</li>
-                <li>Karfa</li>
+                <li class="footer__list__text">Allar vörur</li>
+                <li class="footer__list__text">Starfsfólk</li>
+                <li class="footer__list__text">Námskeið</li>
+                <li class="footer__list__text">Karfa</li>
             </div>
             </ul>
            
