--- a/pages/footer.html
+++ b/pages/footer.html
@@ -12,3 +12,55 @@
 
   </body>
 </html>
+<footer class="fotur">
+    <div class="fotur__texti">
+    <nav class="fotur__texti__listi">
+        <ul>
+            <b class="fotur__texti__listi__b"><li>Vöruflokkar</li></b>
+            <div class="fotur__texti__listi__li">
+            <li class="footer__list__text">Nauðsynjavörur</li>
+            <li class="footer__list__text">Frábærar vörur</li>
+            <li class="footer__list__text">Ómissandi vörur</li>
+            <li class="footer__list__text">Ótrúlegar vörur</li>
+            <li class="footer__list__text">Magnaðar vörur</li>
+        </div>
+        </ul>
+    </nav>
+    <nav class="fotur__texti__listi">
+        <ul>
+            <b class="fotur__texti__listi__b"><li>Vöruflokkar</li></b>
+            <div class="fotur__texti__listi__li">
+            <li class="footer__list__text">Trylltar vörur</li>
+            <li class="footer__list__text">Geggjaðar vörur</li>
+            <li class="footer__list__text">Svakalegar vörur</li>
+            <li class="footer__list__text">Fáránlegar vörur</li>
+            <li class="footer__list__text">Klikkaðar vörur</li>
+        </div>
+        </ul>
+    </nav>
+    <nav class="fotur__texti__listi">
+        <ul>
+            <b class="fotur__texti__listi__b"><li>Námskeið</li></b>
+            <div class="fotur__texti__listi__li">
+            <li class="footer__list__text">V0 - V1 námskeið</li>
+            <li class="footer__list__text">V2 - V4 námskeið</li>
+            <li class="footer__list__text">V5 - V7 námskeið</li>
+            <li class="footer__list__text">Fjallaklifur námskeið</li> 
+        </div> 
+        </ul>
+    </nav>
+    <nav class="fotur__texti__listi">
+        <ul>
+            <b class="fotur__texti__listi__b"><li>Síður</li></b>
+            <div class="fotur__texti__listi__li">
+            <li class="footer__list__text">Allar vörur</li>
+            <li class="footer__list__text">Starfsfólk</li>
+            <li class="footer__list__text">Námskeið</li>
+            <li class="footer__list__text">Karfa</li>
+        </div>
+        </ul>
+       
+    </nav>
+</div>
+<div class="fotur__texti__vorumerki">© 2018 Vöruhúsið</div>
+</footer>
