Buin að laga linka

--- a/pages/staff.html
+++ b/pages/staff.html
@@ -21,7 +21,7 @@
                     <div class="box__link"><a href="../index.html"> Forsíða </a></div>
                     <div><a class="box__link" href="products.html">Vörur</a></div>
                     <div><a class="box__link" href="course.html">Námskeið</a></div>
-                    <div><a class="box__link__current" href="../pages/staff.html">Starfsfólk</a></div>
+                    <div><a class="box__link__current" href="staff.html">Starfsfólk</a></div>
                 </div>
                 <div class="box__cart">
                     <img src="../img/cart.svg" alt="" />
