--- a/pages/course.html
+++ b/pages/course.html
@@ -33,9 +33,9 @@
                 <div class="box__content">
                     <div class="box__lists">
                         <div class="box__link__current"><a href="../index.html"> Forsíða </a></div>
-                        <div><a class="box__link" href="../pages/products.html">Vörur</a></div>
-                        <div><a class="box__link" href="../pages/course.html">Námskeið</a></div>
-                        <div><a class="box__link" href="../pages/staff.html">Starfsfólk</a></div>
+                        <div><a class="box__link" href="products.html">Vörur</a></div>
+                        <div><a class="box__link" href="course.html">Námskeið</a></div>
+                        <div><a class="box__link" href="staff.html">Starfsfólk</a></div>
                     </div>
                     <div class="box__cart">
                         <img src="../img/cart.svg" alt="" />
